--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,20 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    		classpath('com.bmuschko:gradle-docker-plugin:3.0.11')
+
 	}
+}
+
+plugins {
+  id 'com.palantir.git-version' version '0.10.0'
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.bmuschko.docker-java-application'
+apply plugin: 'com.palantir.git-version'
 
 group = 'io.durbs'
 version = '0.0.1-SNAPSHOT'
@@ -29,4 +37,25 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.projectlombok:lombok')
+}
+
+docker {
+
+  if (System.getenv('CI')) {
+    url = System.getenv('DOCKER_HOST')
+    certPath = new File(System.getenv('DOCKER_CERT_PATH'))
+
+    registryCredentials {
+      username = System.getenv('DOCKER_USERNAME')
+      password = System.getenv('DOCKER_PASSWORD')
+      email = System.getenv('DOCKER_EMAIL')
+    }
+  }
+
+  javaApplication {
+    maintainer = 'Josh Durbin "durbinjo593@gmail.com"'
+    port = 5050
+    baseImage = 'anapsix/alpine-java:8_server-jre'
+    tag = "joshdurbin/spring-consumer-producer-student-scores:latest"
+  }
 }
